chore: refactor backend